Lite server package has been installed

--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "doc_app",
   "version": "1.0.0",
   "description": "Doctor Appointment App",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
+    "start":"lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lite-server": "^2.6.1"
+  }
 }
