--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
     "lite-server": "^2.6.1"
   }
 }
