--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.2",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
-    "lite-server": "^2.6.1"
+    "lite-server": "^2.6.1",
+    "node-sass": "^7.0.3"
   }
 }
